Fix spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -227,6 +227,10 @@
   margin: 0 0 0 10px;
 }
 
+.post-content pre {
+  margin-bottom: 2em;
+}
+
 .post-content code,
 .post-content pre code {
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
